command input docs

--- a/docs/docs/03-Input/02-Simple/01-Guide.mdx
+++ b/docs/docs/03-Input/02-Simple/01-Guide.mdx
@@ -9,7 +9,7 @@ slug: /input/simpleinput/guide
 This package can be used to tokenize simple delimiter-based inputs escaped by quotes.
 For example, it can parse `hello "this is" 'some text'` as `["hello", "this is", "some text"]`.
 It can also handle parsing with custom delimiters, such as `hello."this is".'some text'`
-which can be parsed the same as the above using the [WithTokenRegex](api#func-withtokenregex) and [WithDelimiterRegex](api#func-withdelimiterregex) options.
+which can be parsed the same way using the [WithTokenRegex](api#func-withtokenregex) and [WithDelimiterRegex](api#func-withdelimiterregex) options.
 
 ## Example
 
